[tool.poetry]
name = "repl_python3_random"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
english-words = "^1.0.4"
Flask = "^2.0.2"
Jokes-API = "^1.0.5"
jokes = "^0.1.7"
pyjokes = "^0.6.0"
praw = "^7.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
